force-app/main/default/objects/ComboPackageItem__c/ComboPackageItem__c.object-meta.xml
<CustomObject>
    <label>Combo Package Item</label>
    <nameField>
        <label>Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>ITEM-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Combo Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>