force-app/main/default/objects/ComboPackageItem__c/fields/ComboPackage__c.field-meta.xml
<CustomField>
    <fullName>ComboPackage__c</fullName>
    <label>Combo Package</label>
    <referenceTo>ComboPackage__c</referenceTo>
    <relationshipLabel>Combo Package Items</relationshipLabel>
    <relationshipName>Combo_Package_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>