force-app/main/default/objects/ComboPackageItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Combo Package Items</relationshipLabel>
    <relationshipName>Combo_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>