force-app/main/default/objects/ComboPackageItem__c/fields/ProductImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ProductImageUrl__c</fullName>
    <label>Product Image URL</label>
    <type>Url</type>
</CustomField>