force-app/main/default/objects/ComboPackageItem__c/fields/ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductPrice__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>